fixing aesthetics, collapsing, and standardization on each page

--- a/public/css/tat.css
+++ b/public/css/tat.css
@@ -569,7 +569,7 @@ input {
 	display: block;
 }
 .dropdown {
-	margin-bottom: 5px;
+	margin-bottom: 15px;
 }
 #footersaying {
 	text-shadow: -1px 0 #ff5800, 0 1px #ff5800, 1px 0 #ff5800, 0 -1px #ff5800; 
